# omd2tex

./: .gitignore  README.md  api.html  genindex.html  index.html  main.py  objects.inv  py-modindex.html  pyproject.toml  recursive.py  requirements.txt  search.html  searchindex.js  setup.py  test.csv  yaml_test.py
.doctrees/: api.doctree  environment.pickle  index.doctree
_api/: modules.html  omd2tex.html  omd2tex.objects.base.html  omd2tex.objects.citation.html  omd2tex.objects.codeblock.html  omd2tex.objects.document.html  omd2tex.objects.equation.html  omd2tex.objects.file.html  omd2tex.objects.footnote.html  omd2tex.objects.fragment.html  omd2tex.objects.headline.html  omd2tex.objects.html  omd2tex.objects.image.html  omd2tex.objects.list.html  omd2tex.objects.makefile.html  omd2tex.objects.paragraph.html  omd2tex.objects.preamble.html  omd2tex.objects.quote.html  omd2tex.objects.reference.html  omd2tex.objects.table.html  omd2tex.tools.class_constructor.html  omd2tex.tools.config_base.html  omd2tex.tools.counter.html  omd2tex.tools.database.html  omd2tex.tools.error_catcher.html  omd2tex.tools.frontmatter_parser.html  omd2tex.tools.globals.html  omd2tex.tools.html  omd2tex.tools.markdown_parser.html  omd2tex.tools.search.html  omd2tex.tools.settings.html  omd2tex.tools.settings_preamble.html  omd2tex.tools.text_tools.html
_modules/: index.html
api/: index.html  objects.html  omd2tex.html  tools.html
default/: 2025-08-05.md  Makefile  current  current.md  formulas.json  formulas4equations.json  globals.py  preamble.json  settings.json
docs/: Makefile  README.md  make.bat  requirements.txt
notebooks/: @citation2.md  objects.ipynb
objects/: __init__.py  file.py  (+18 more)
(+316 files in other folders)
